--- a/index.html
+++ b/index.html
@@ -365,9 +365,9 @@
     <!-- Footer -->
     <footer>
       <div class="social-icons">
-        <i class="g-link fa-brands fa-meta"></i>
-        <i class="g-link fa-brands fa-x-twitter"></i>
-        <i class="g-link fab fa-instagram"></i>
+        <a href="#home"><i class="g-link fa-brands fa-meta"></i></a>
+        <a href="#home"><i class="g-link fa-brands fa-x-twitter"></i></a>
+        <a href="#home"><i class="g-link fab fa-instagram"></i></a>
       </div>
       <p>© <span id="year"></span> R2&nbsp;Place. All&nbsp;rights&nbsp;reserved</p>
     </footer>
