used f.rem(), tested with very large default font-size

--- a/index.html
+++ b/index.html
@@ -109,32 +109,38 @@
         <div class="small-menu">
           <button class="small-menu__accordion small-menu__accordion--active">PASTA</button>
           <div class="small-menu__panel">
-            <div class="small-menu__item--1">Salmon Spaghetti</div>
-            <div class="small-menu__item-price--1">£12.50</div>
-            <div class="small-menu__item--2">Baked Seafood Fettuccine</div>
-            <div class="small-menu__item-price--2">£14.50</div>
-            <div class="small-menu__item--3">Mac and Cheese with Ham</div>
-            <div class="small-menu__item-price--3">£10.50</div>
+            <div class="small-menu__content">
+              <div class="small-menu__item--1">Salmon Spaghetti</div>
+              <div class="small-menu__item-price--1">£12.50</div>
+              <div class="small-menu__item--2">Baked Seafood Fettuccine</div>
+              <div class="small-menu__item-price--2">£14.50</div>
+              <div class="small-menu__item--3">Mac and Cheese with Ham</div>
+              <div class="small-menu__item-price--3">£10.50</div>
+            </div>
           </div>
 
           <button class="small-menu__accordion small-menu__accordion--active">RICE</button>
           <div class="small-menu__panel">
-            <div class="small-menu__item--1">Thai Pineapple Fried Rice</div>
-            <div class="small-menu__item-price--1">£16.50</div>
-            <div class="small-menu__item--2">Salmon and Prawn Risotto</div>
-            <div class="small-menu__item-price--2">£14.50</div>
-            <div class="small-menu__item--3">Mackerel with Black Rice</div>
-            <div class="small-menu__item-price--3">£12.50</div>
+            <div class="small-menu__content">
+              <div class="small-menu__item--1">Thai Pineapple Fried Rice</div>
+              <div class="small-menu__item-price--1">£16.50</div>
+              <div class="small-menu__item--2">Salmon and Prawn Risotto</div>
+              <div class="small-menu__item-price--2">£14.50</div>
+              <div class="small-menu__item--3">Mackerel with Black Rice</div>
+              <div class="small-menu__item-price--3">£12.50</div>
+            </div>
           </div>
 
           <button class="small-menu__accordion small-menu__accordion--active">SIDES</button>
           <div class="small-menu__panel">
-            <div class="small-menu__item--1">Satay Chicken Skewers</div>
-            <div class="small-menu__item-price--1">£8.00</div>
-            <div class="small-menu__item--2">Salmon Avocado Rolls</div>
-            <div class="small-menu__item-price--2">£9.50</div>
-            <div class="small-menu__item--3">Petits Pains Curry Prawn</div>
-            <div class="small-menu__item-price--3">£8.50</div>
+            <div class="small-menu__content">
+              <div class="small-menu__item--1">Satay Chicken Skewers</div>
+              <div class="small-menu__item-price--1">£8.00</div>
+              <div class="small-menu__item--2">Salmon Avocado Rolls</div>
+              <div class="small-menu__item-price--2">£9.50</div>
+              <div class="small-menu__item--3">Petits Pains Curry Prawn</div>
+              <div class="small-menu__item-price--3">£8.50</div>
+            </div>
           </div>
         </div>
 
