revised grid of reservation form

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Welcome to R2 Place. A place to Relax and Recharge.">
   <meta name="keywords" content="R2 Place, restaurant, food, fusion, lunch, dinner, relax, recharge">
+  <meta name="author" content="MT Wong">
+
   <title>R2 Place</title>
   <link rel="icon" type="image/x-icon" href="./images/R2.png">
 
