--- a/index.html
+++ b/index.html
@@ -3,29 +3,54 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="theme-color" content="#ffffff" />
+
+  <meta name="keywords" content="R2 Place, restaurant, food, fusion, asian, lunch, dinner, relax, recharge">
   <meta name="description" content="Welcome to R2 Place. A place to Relax and Recharge.">
-  <meta name="keywords" content="R2 Place, restaurant, food, fusion, lunch, dinner, relax, recharge">
-  <meta name="author" content="MT Wong">
+  <meta itemprop="description" content="Welcome to R2 Place. A place to Relax and Recharge.">
+  <meta itemprop="url" content="https://mtw72.github.io/R2-revising/">
+
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mtw72.github.io/R2-revising/" />
+  <meta property="og:title" content="R2 Place" />
+  <meta property="og:description" content="Welcome to R2 Place. A place to Relax and Recharge." />
 
   <title>R2 Place</title>
   <link rel="icon" type="image/x-icon" href="./images/R2.png">
+  <link rel="canonical" href="https://mtw72.github.io/R2-revising/">
 
+  <!-- 
+  <link rel="preload" as="script" href="/_frontend_output/js/scripts.js?v=202402290859">
+  <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="/_frontend_output/fonts/fontawesome/fa-brands-400.woff2">
+  <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="/_frontend_output/fonts/fontawesome/fa-regular-400.woff2">
+  <link rel="preload" as="font" type="font/woff2" crossorigin="anonymous" href="/_frontend_output/fonts/fontawesome/fa-solid-900.woff2">
+  <link rel="stylesheet" media="print" onload="this.media='all'; this.onload=null;" href="/_frontend_output/css/styles.css?v=202402290859">
+  <noscript><link rel="stylesheet" href="/_frontend_output/css/styles.css?v=202402290859"></noscript>
+  <link rel="preconnect" as="style" data-contrast-sheet href="/_frontend_output/css/contrast.css?v=202402290859" /> -->
+
+
+  <!-- external source -->
   <!-- Google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Google font for logo -->
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap">
 
   <!-- Google font for body -->
-  <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" >
 
+  <!-- Font Awesome -->
+  <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script>
+
+  <!-- internal source -->
   <!-- CSS for R2 Place -->
-  <!-- <link rel="stylesheet" href="r2place.css"> -->
   <link rel="stylesheet" href="./scss/style.css">
 
-
+  <!-- Javascript for R2 Place -->
   <!-- script for loader -->
   <script defer src="./scripts/loader.js" charset="utf-8"></script>
 
@@ -50,8 +75,6 @@
   <!-- script for footer -->
   <script defer src="./scripts/footer.js" charset="utf-8"></script>
 
-  <!-- Font Awesome -->
-  <script defer src="https://kit.fontawesome.com/b406833c6d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
