--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <meta name="theme-color" content="lightblue" />
+  <meta name="theme-color" content="rgb(172, 113, 42);" />
   <meta name='robots' content='max-image-preview:large' />
   <meta name="keywords" content="R2 Place, restaurant, food, fusion, asian, lunch, dinner, relax, recharge">
   <meta name="description" content="A place to Relax and Recharge.">
+
   <meta itemprop="description" content="A place to Relax and Recharge.">
   <meta itemprop="url" content="https://mtw72.github.io/R2-revising/">
+  
   <meta property="og:url" content="https://mtw72.github.io/R2-revising/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="R2 Place" />
