introduced a new mobile interface for openhour in findus

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="rgb(172, 113, 42);" />
+  <meta name="theme-color" content="rgb(172, 113, 42)" /> 
+  <!-- #ac712a -->
   <meta name='robots' content='max-image-preview:large' />
   <meta name="keywords" content="R2 Place, restaurant, food, fusion, asian, lunch, dinner, relax, recharge">
   <meta name="description" content="A place to Relax and Recharge.">
@@ -359,7 +360,15 @@
       <div class="findus__openhour-container">
         <div class="findus__openhour-content">
           <h3>Opening Hours</h3>
-          <ul class="openhour-grid">
+          <ul class="openhour-grid--small">
+            <li>Sunday</li>
+            <li>12:00 - 17:00</li>
+            <li>Monday to Thursday</li>
+            <li>12:00 - 20:00</li>
+            <li>Friday & Saturday</li>
+            <li>12:00 - 21:00</li>
+          </ul>
+          <ul class="openhour-grid--large">
             <li>Sunday:</li>
             <li>12:00 - 17:00</li>
             <li>Monday:</li>
