updated meta tags about twitter

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <meta name='robots' content='max-image-preview:large' />
   <meta name="keywords" content="R2 Place, restaurant, food, fusion, asian, lunch, dinner, relax, recharge">
   <meta name="description" content="A place to Relax and Recharge.">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:alt" content="Interior of R2 Place">
+  <meta name="twitter:image" content="https://mtw72.github.io/R2-revising/images/twitter-image.jpeg">
+  <!-- Images for this Card should be at least 280px in width, and at least 150px in height. Image must be less than 1MB in size. -->
 
   <meta itemprop="description" content="A place to Relax and Recharge.">
   <meta itemprop="url" content="https://mtw72.github.io/R2-revising/">
