--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
         <h1>MENU</h1>
 
         <div class="small-menu">
-          <button class="small-menu__accordion small-menu__accordion--active">PASTA</button>
+          <button class="small-menu__accordion small-menu__accordion--active">
+            <h2>PASTA</h2>
+          </button>
           <div class="small-menu__panel">
             <div class="small-menu__content">
               <div class="small-menu__item--1">Salmon Spaghetti</div>
@@ -167,14 +169,19 @@
         <div class="large-menu">
           <div class="large-menu__tabs">
             <div class="large-menu__tab large-menu__tab--active">
-              <a href="javascript:void(0)" onclick="openMenu(event, 'Pasta');" id="myLink"
-                class="large-menu__tab-link">PASTA</a>
+              <a href="javascript:void(0)" onclick="openMenu(event, 'Pasta');" id="myLink" class="large-menu__tab-link">
+                <h2>PASTA</h2>
+              </a>
             </div>
             <div class="large-menu__tab">
-              <a href="javascript:void(0)" onclick="openMenu(event, 'Rice');" class="large-menu__tab-link">RICE</a>
+              <a href="javascript:void(0)" onclick="openMenu(event, 'Rice');" class="large-menu__tab-link">
+                <h2>RICE</h2>
+              </a>
             </div>
             <div class="large-menu__tab">
-              <a href="javascript:void(0)" onclick="openMenu(event, 'Sides');" class="large-menu__tab-link">SIDES</a>
+              <a href="javascript:void(0)" onclick="openMenu(event, 'Sides');" class="large-menu__tab-link">
+                <h2>SIDES</h2>
+              </a>
             </div>
           </div>
 
@@ -291,39 +298,45 @@
             <div class="reservation__form">
               <div class="reservation__form--name">
                 <label for="name">Name</label>
-                <input type="text" class="input-control" id="name" placeholder="Enter Name" name="name" required>
+                <input type="text" class="input-control" id="name" placeholder="Enter Name" name="name" required
+                  aria-required="true" autocomplete="name" title="Please enter at least 2 letters">
               </div>
 
               <div class="reservation__form--phone">
-                <label for="email">Phone</label>
-                <input type="tel" class="input-control" id="tel" placeholder="Enter Phone" name="tel" required>
+                <label for="email">Phone Number</label>
+                <input type="tel" class="input-control" id="tel" placeholder="Enter Phone Number" name="tel" required
+                  aria-required="true" autocomplete="tel" pattern="[0-9]{11}"
+                  title="Please enter your UK phone number without +44">
               </div>
 
               <div class="reservation__form--email">
                 <label for="email">Email</label>
-                <input type="email" class="input-control" id="email" placeholder="Enter Email" name="email" required>
+                <input type="email" class="input-control" id="email" placeholder="Enter Email" name="email" required
+                  aria-required="true" autocomplete="email" title="Please enter your email">
               </div>
 
               <div class="reservation__form--guest-number">
                 <label for="ppl">Number of Guest(s)</label>
                 <input type="number" class="input-control" id="ppl" placeholder="Enter Number" name="ppl" min="1"
-                  max="12" required>
+                  max="12" required aria-required="true" pattern="[0-9]" title="Please enter the number of guest(s)">
               </div>
 
               <div class="reservation__form--date">
                 <label for="date">Date</label>
-                <input type="date" class="input-control" id="date" placeholder="Date" name="date" required>
+                <input type="date" class="input-control" id="date" placeholder="Date" name="date" required
+                  aria-required="true">
               </div>
 
               <div class="reservation__form--time">
                 <label for="time">Time*</label>
                 <input type="time" class="input-control" id="time" placeholder="Time*" name="time"
-                  onfocus="this.value=''" required>
+                  onfocus="this.value=''" required aria-required="true"
+                  title="Please enter the time within the opening hours">
               </div>
 
               <div class="reservation__form--message">
                 <label for="message">Message / Special Request</label>
-                <textarea class="textarea-control" id="message" name="message"
+                <textarea class="textarea-control" id="message" name="message" aria-required="false"
                   onfocus="clearPlaceholder()">Message / Special Request</textarea>
               </div>
 
