--- a/index.html
+++ b/index.html
@@ -299,11 +299,15 @@
               <div class="reservation__form--name">
                 <label for="name">Name</label>
                 <input type="text" class="input-control" id="name" placeholder="Enter Name" name="name" required
-                  aria-required="true" autocomplete="name" title="Please enter at least 2 letters">
+                  aria-required="true" autocomplete="name">
+                <!-- aria-describedby="name-length-error" aria-invalid="true" -->
+                <!-- title="Please enter at least 2 letters" -->
+                <p id="name-length-error" role="alert">Your name must have at least two letters and no unusual
+                  characters</p>
               </div>
 
               <div class="reservation__form--phone">
-                <label for="email">Phone Number</label>
+                <label for="tel">Phone Number</label>
                 <input type="tel" class="input-control" id="tel" placeholder="Enter Phone Number" name="tel" required
                   aria-required="true" autocomplete="tel" pattern="[0-9]{11}"
                   title="Please enter your UK phone number without +44">
@@ -312,13 +316,15 @@
               <div class="reservation__form--email">
                 <label for="email">Email</label>
                 <input type="email" class="input-control" id="email" placeholder="Enter Email" name="email" required
-                  aria-required="true" autocomplete="email" title="Please enter your email">
+                  aria-required="true" autocomplete="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+                <!-- title="Please enter a valid email address" -->
+
               </div>
 
               <div class="reservation__form--guest-number">
                 <label for="ppl">Number of Guest(s)</label>
                 <input type="number" class="input-control" id="ppl" placeholder="Enter Number" name="ppl" min="1"
-                  max="12" required aria-required="true" pattern="[0-9]" title="Please enter the number of guest(s)">
+                  max="12" required aria-required="true">
               </div>
 
               <div class="reservation__form--date">
@@ -330,8 +336,7 @@
               <div class="reservation__form--time">
                 <label for="time">Time*</label>
                 <input type="time" class="input-control" id="time" placeholder="Time*" name="time"
-                  onfocus="this.value=''" required aria-required="true"
-                  title="Please enter the time within the opening hours">
+                  onfocus="this.value=''" required aria-required="true">
               </div>
 
               <div class="reservation__form--message">
