--- a/index.html
+++ b/index.html
@@ -84,12 +84,15 @@
   <div class="website-content website-content--hidden">
 
     <header>
+      <!-- skip link for keyboard users -->
+      <a href="#menu" class="skip-link">Skip to Menu</a>
+
       <!-- A horizontal navbar that becomes vertical on small screens -->
       <nav class="navbar" id="navbar">
         <div class="navbar__container">
           <a class="navbar__brand g-logofont" href="#home">R2 Place</a>
 
-          <button class="navbar__toggler" type="button">&#9776;</button>
+          <button class="navbar__toggler" type="button" aria-label="Open Menu">&#9776;</button>
 
           <div class="navbar__collapse" id="collapsibleNavbar">
             <ul class="navbar__nav">
@@ -112,7 +115,9 @@
       <!-- Home -->
       <section id="home">
         <picture>
+          <source media="(min-width: 930.5px)" srcset="./images/home-bg-largescreen.webp" type="image/webp">
           <source media="(min-width: 930.5px)" srcset="./images/home-bg-largescreen.jpeg">
+          <source media="(min-width: 449.5px)" srcset="./images/home-bg-mediumscreen.webp" type="image/webp">
           <source media="(min-width: 449.5px)" srcset="./images/home-bg-mediumscreen.jpeg">
           <img src="./images/home-bg-smallscreen.jpeg" alt="R2 Place">
         </picture>
@@ -125,9 +130,8 @@
       <!-- Menu Container -->
       <section id="menu">
         <h1>MENU</h1>
-
         <div class="small-menu">
-          <button class="small-menu__accordion small-menu__accordion--active">
+          <button class="small-menu__accordion small-menu__accordion--active" aria-expanded="true">
             <h2>PASTA</h2>
           </button>
           <div class="small-menu__panel">
@@ -141,7 +145,9 @@
             </div>
           </div>
 
-          <button class="small-menu__accordion small-menu__accordion--active">RICE</button>
+          <button class="small-menu__accordion small-menu__accordion--active" aria-expanded="true">
+            <h2>RICE</h2>
+          </button>
           <div class="small-menu__panel">
             <div class="small-menu__content">
               <div class="small-menu__item--1">Thai Pineapple Fried Rice</div>
@@ -153,7 +159,9 @@
             </div>
           </div>
 
-          <button class="small-menu__accordion small-menu__accordion--active">SIDES</button>
+          <button class="small-menu__accordion small-menu__accordion--active" aria-expanded="true">
+            <h2>SIDES</h2>
+          </button>
           <div class="small-menu__panel">
             <div class="small-menu__content">
               <div class="small-menu__item--1">Satay Chicken Skewers</div>
@@ -167,6 +175,7 @@
         </div>
 
         <div class="large-menu">
+          <!-- any aria-labels for those tab -->
           <div class="large-menu__tabs">
             <div class="large-menu__tab large-menu__tab--active">
               <a href="javascript:void(0)" onclick="openMenu(event, 'Pasta');" id="myLink" class="large-menu__tab-link">
@@ -199,7 +208,9 @@
               <p>Macaroni and Cheese with Parma Ham</p>
             </div>
             <div class="large-menu__image">
-              <img src="./images/salmon-spaghetti.jpeg" alt="Salmon Spaghetti" title="Salmon Spaghetti" loading="lazy">
+              <img src="./images/salmon-spaghetti.webp"
+                onerror="this.onerror=null; this.src='./images/salmon-spaghetti.jpeg';" alt="Salmon Spaghetti"
+                title="Salmon Spaghetti" loading="lazy">
               <p class="large-menu__image-description">Salmon Spaghetti</p>
             </div>
           </div>
@@ -218,8 +229,9 @@
               <p>Grilled Mackerel with Tofu and Black Rice</p>
             </div>
             <div class="large-menu__image">
-              <img src="./images/thai-pineapple-fried-rice.jpeg" alt="Thai Pineapple Fried Rice"
-                title="Thai Pineapple Fried Rice" loading="lazy">
+              <img src="./images/thai-pineapple-fried-rice.webp"
+                onerror="this.onerror=null; this.src='./images/thai-pineapple-fried-rice.jpeg';"
+                alt="Thai Pineapple Fried Rice" title="Thai Pineapple Fried Rice" loading="lazy">
               <p class="large-menu__image-description">Thai Pineapple Fried Rice</p>
             </div>
           </div>
@@ -238,8 +250,9 @@
               <p>Curry Prawn in Petits Pains</p>
             </div>
             <div class="large-menu__image">
-              <img src="./images/satay-chicken-skewers.jpeg" alt="Satay Chicken Skewers" title="Satay Chicken Skewers"
-                loading="lazy">
+              <img src="./images/satay-chicken-skewers.webp"
+                onerror="this.onerror=null; this.src='./images/satay-chicken-skewers.jpeg';" alt="Satay Chicken Skewers"
+                title="Satay Chicken Skewers" loading="lazy">
               <p class="large-menu__image-description">Satay Chicken Skewers</p>
             </div>
           </div>
@@ -251,19 +264,23 @@
 
             <!-- images with number and caption text -->
             <div class="small-menu__slide small-menu__slide--fade">
-              <img src="./images/salmon-spaghetti.jpeg" alt="Salmon Spaghetti" title="Salmon Spaghetti" loading="lazy">
+              <img src="./images/salmon-spaghetti.webp"
+                onerror="this.onerror=null; this.src='./images/salmon-spaghetti.jpeg';" alt="Salmon Spaghetti"
+                title="Salmon Spaghetti" loading="lazy">
               <div class="small-menu__image-description">Salmon Spaghetti</div>
             </div>
 
             <div class="small-menu__slide small-menu__slide--fade">
-              <img src="./images/thai-pineapple-fried-rice.jpeg" alt="Thai Pineapple Fried Rice"
-                title="Thai Pineapple Fried Rice" loading="lazy">
+              <img src="./images/thai-pineapple-fried-rice.webp"
+                onerror="this.onerror=null; this.src='./images/thai-pineapple-fried-rice.jpeg';"
+                alt="Thai Pineapple Fried Rice" title="Thai Pineapple Fried Rice" loading="lazy">
               <div class="small-menu__image-description">Thai Pineapple Fried Rice</div>
             </div>
 
             <div class="small-menu__slide small-menu__slide--fade">
-              <img src="./images/satay-chicken-skewers.jpeg" alt="Satay Chicken Skewers" title="Satay Chicken Skewers"
-                loading="lazy">
+              <img src="./images/satay-chicken-skewers.webp"
+                onerror="this.onerror=null; this.src='./images/satay-chicken-skewers.jpeg';" alt="Satay Chicken Skewers"
+                title="Satay Chicken Skewers" loading="lazy">
               <div class="small-menu__image-description">Satay Chicken Skewers</div>
             </div>
 
@@ -290,14 +307,16 @@
         <div class="reservation">
           <!-- reservation photo -->
           <div class="reservation__photo">
-            <img src="./images/r2place-entrance.jpeg" alt="R2 Place Entrance" title="R2 Place Entrance" loading="lazy">
+            <img src="./images/r2place-entrance.webp"
+              onerror="this.onerror=null; this.src='./images/r2place-entrance.jpeg';" alt="R2 Place Entrance"
+              title="R2 Place Entrance" loading="lazy">
           </div>
 
           <!-- reservation form -->
           <form action="" onsubmit="formSubmitted()" method="post" enctype="text/plain">
             <div class="reservation__form">
               <div class="reservation__form--name">
-                <label for="name">Name</label>
+                <label for="name">Name<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="text" class="input-control" id="name" placeholder="Enter Name" name="name" required
                   aria-required="true" autocomplete="name">
                 <!-- aria-describedby="name-length-error" aria-invalid="true" -->
@@ -307,14 +326,14 @@
               </div>
 
               <div class="reservation__form--phone">
-                <label for="tel">Phone Number</label>
+                <label for="tel">Phone Number<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="tel" class="input-control" id="tel" placeholder="Enter Phone Number" name="tel" required
                   aria-required="true" autocomplete="tel" pattern="[0-9]{11}"
                   title="Please enter your UK phone number without +44">
               </div>
 
               <div class="reservation__form--email">
-                <label for="email">Email</label>
+                <label for="email">Email<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="email" class="input-control" id="email" placeholder="Enter Email" name="email" required
                   aria-required="true" autocomplete="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
                 <!-- title="Please enter a valid email address" -->
@@ -322,19 +341,19 @@
               </div>
 
               <div class="reservation__form--guest-number">
-                <label for="ppl">Number of Guest(s)</label>
+                <label for="ppl">Number of Guest(s)<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="number" class="input-control" id="ppl" placeholder="Enter Number" name="ppl" min="1"
                   max="12" required aria-required="true">
               </div>
 
               <div class="reservation__form--date">
-                <label for="date">Date</label>
+                <label for="date">Date<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="date" class="input-control" id="date" placeholder="Date" name="date" required
                   aria-required="true">
               </div>
 
               <div class="reservation__form--time">
-                <label for="time">Time*</label>
+                <label for="time">Time<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="time" class="input-control" id="time" placeholder="Time*" name="time"
                   onfocus="this.value=''" required aria-required="true">
               </div>
@@ -419,9 +438,9 @@
     <!-- Footer -->
     <footer>
       <div class="social-icons">
-        <a href="#home"><i class="g-link fa-brands fa-meta"></i></a>
-        <a href="#home"><i class="g-link fa-brands fa-x-twitter"></i></a>
-        <a href="#home"><i class="g-link fab fa-instagram"></i></a>
+        <a href="#home"><i class="g-link fa-brands fa-meta" role="img" aria-label="Meta Icon"></i></a>
+        <a href="#home"><i class="g-link fa-brands fa-x-twitter" role="img" aria-label="X Twitter Icon"></i></a>
+        <a href="#home"><i class="g-link fab fa-instagram" role="img" aria-label="Instagram Icon"></i></a>
       </div>
       <p>© <span id="year"></span> R2&nbsp;Place. All&nbsp;rights&nbsp;reserved</p>
     </footer>
