--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
   <!-- script for large menu -->
   <script defer src="./scripts/largeMenu.js" charset="utf-8"></script>
   <!-- script for default values in reservation form -->
-  <script defer src="./scripts/defaultForm.js" charset="utf-8"></script>
+  <script defer src="./scripts/defaultFormValues.js" charset="utf-8"></script>
+  <!-- script for reservation form -->
+  <script defer src="./scripts/reservationForm.js" charset="utf-8"></script>
   <!-- script for textarea in reservation form -->
   <script defer src="./scripts/textarea.js" charset="utf-8"></script>
   <!-- script for footer -->
@@ -176,7 +178,7 @@
         </div>
 
         <div class="large-menu">
-          <!-- any aria-labels for those tab -->
+          <!-- any aria-labels for those tab? YES-->
           <div class="large-menu__tabs">
             <div class="large-menu__tab large-menu__tab--active">
               <a href="javascript:void(0)" onclick="openMenu(event, 'Pasta');" id="myLink" class="large-menu__tab-link">
@@ -259,7 +261,7 @@
           </div>
         </div>
 
-        <div class="small-menu__carousel">
+        <div class="small-menu__carousel" role="carousel" aria-label="carousel of food photos">
           <!-- carousel content for small to medium menu -->
           <div class="small-menu__slideshow-container">
 
@@ -286,15 +288,20 @@
             </div>
 
             <!-- Next and previous buttons -->
-            <a class="small-menu__slideshow-button--prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="small-menu__slideshow-button--next" onclick="plusSlides(1)">&#10095;</a>
+            <a class="small-menu__slideshow-button--prev" onclick="plusSlides(-1)" role="button"
+              aria-label="previous button">&#10094;</a>
+            <a class="small-menu__slideshow-button--next" onclick="plusSlides(1)" role="button"
+              aria-label="next button">&#10095;</a>
           </div>
 
           <!-- The dots/circles -->
           <div class="small-menu__slideshow-dots">
-            <span class="small-menu__slideshow-dot" onclick="currentSlide(1)"></span>
-            <span class="small-menu__slideshow-dot" onclick="currentSlide(2)"></span>
-            <span class="small-menu__slideshow-dot" onclick="currentSlide(3)"></span>
+            <span class="small-menu__slideshow-dot" onclick="currentSlide(1)" role="button"
+              aria-label="dot to first photo"></span>
+            <span class="small-menu__slideshow-dot" onclick="currentSlide(2)" role="button"
+              aria-label="dot to second photo"></span>
+            <span class="small-menu__slideshow-dot" onclick="currentSlide(3)" role="button"
+              aria-label="dot to third photo"></span>
           </div>
 
         </div>
@@ -319,24 +326,25 @@
               <div class="reservation__form--name">
                 <label for="name">Name<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="text" class="input-control" id="name" placeholder="Enter Name" name="name" required
-                  aria-required="true" autocomplete="name" pattern="[A-Za-z]{2,}">
+                  aria-required="true" autocomplete="name" pattern="[A-Za-z]{2,}"
+                  title="Please enter at least two letters">
                 <!-- aria-describedby="name-length-error" aria-invalid="true" -->
                 <p class="error-message" id="name-length-error" role="alert">Please enter at least two letters</p>
               </div>
 
               <div class="reservation__form--phone">
                 <label for="tel">Phone Number<span class="mandatory-field">&nbsp;*</span></label>
-                <p>+44</p>
                 <input type="tel" class="input-control" id="tel" placeholder="Enter Phone Number" name="tel" required
-                  aria-required="true" autocomplete="tel" pattern="[0-9]{10}">
+                  aria-required="true" autocomplete="tel" pattern="[0-9]{5,}" title="Please enter a valid phone number">
                 <!-- aria-describedby="phone-length-error" aria-invalid="true" -->
-                <p class="error-message" id="phone-length-error" role="alert">Please enter 10 digits</p>
+                <p class="error-message" id="phone-length-error" role="alert">Please enter a valid phone number</p>
               </div>
 
               <div class="reservation__form--email">
                 <label for="email">Email<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="email" class="input-control" id="email" placeholder="Enter Email" name="email" required
-                  aria-required="true" autocomplete="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+                  aria-required="true" autocomplete="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                  title="Please enter a valid email address">
                 <!-- aria-describedby="email-error" aria-invalid="true" -->
                 <p class="error-message" id="email-error" role="alert">Please enter a valid email address</p>
               </div>
@@ -344,7 +352,7 @@
               <div class="reservation__form--guest-number">
                 <label for="ppl">Number of Guest(s)<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="number" class="input-control" id="ppl" placeholder="Enter Number" name="ppl" min="1"
-                  max="12" required aria-required="true">
+                  max="12" required aria-required="true" title="Please enter a valid number">
                 <!-- aria-describedby="guest-number-error" aria-invalid="true" -->
                 <p class="error-message" id="guest-number-error" role="alert">Please enter a valid number</p>
               </div>
@@ -352,7 +360,7 @@
               <div class="reservation__form--date">
                 <label for="date">Date<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="date" class="input-control" id="date" placeholder="Date" name="date" required
-                  aria-required="true">
+                  aria-required="true" title="Please select a valid date">
                 <!-- aria-describedby="date-error" aria-invalid="true" -->
                 <p class="error-message" id="date-error" role="alert">Please select a valid date</p>
               </div>
@@ -360,7 +368,7 @@
               <div class="reservation__form--time">
                 <label for="time">Time<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="time" class="input-control" id="time" placeholder="Time*" name="time"
-                  onfocus="this.value=''" required aria-required="true">
+                  onfocus="this.value=''" required aria-required="true" title="Please select a valid time">
                 <!-- aria-describedby="time-error" aria-invalid="true" -->
                 <p class="error-message" id="time-error" role="alert">Please select a valid time</p>
               </div>
@@ -368,11 +376,11 @@
               <div class="reservation__form--message">
                 <label for="message">Message / Special Request</label>
                 <textarea class="textarea-control" id="message" name="message" aria-required="false"
-                  onfocus="clearPlaceholder()">Message / Special Request</textarea>
+                  onfocus="clearPlaceholder()">Message / Special Request (e.g. Dietary Restriction, Special Occasions)</textarea>
               </div>
 
               <div class="reservation__form--bottom-part">
-                <p>Reservations must be made at least an hour before the scheduled booking time.</p>
+                <p>Please make reservations at least an hour before the scheduled booking time.</p>
                 <div class="clearfix">
                   <button type="submit" class="reservation__form--button">Submit</button>
                 </div>
