--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
               <div class="reservation__form--email">
                 <label for="email">Email<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="email" class="input-control" id="email" placeholder="Enter Email" name="email" required
-                  aria-required="true" autocomplete="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                  aria-required="true" autocomplete="email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
                   title="Please enter a valid email address">
                 <!-- aria-describedby="email-error" aria-invalid="true" -->
                 <p class="error-message" id="email-error" role="alert">Please enter a valid email address</p>
