--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
   <!-- script for large menu -->
   <script defer src="./scripts/largeMenu.js" charset="utf-8"></script>
   <!-- script for default values in reservation form -->
-  <script defer src="./scripts/defaultFormValues.js" charset="utf-8"></script>
+  <script defer src="./scripts/reservationForm/formDefaultValues.js" charset="utf-8"></script>
+  <!-- script for validation of reservation form -->
+  <script defer src="./scripts/reservationForm/formValidation.js" charset="utf-8"></script>
   <!-- script for reservation form -->
-  <script defer src="./scripts/reservationForm.js" charset="utf-8"></script>
+  <script defer src="./scripts/reservationForm/formSubmission.js" charset="utf-8"></script>
   <!-- script for textarea in reservation form -->
-  <script defer src="./scripts/textarea.js" charset="utf-8"></script>
+  <script defer src="./scripts/reservationForm/formTextarea.js" charset="utf-8"></script>
   <!-- script for footer -->
   <script defer src="./scripts/footer.js" charset="utf-8"></script>
 </head>
@@ -326,24 +328,17 @@
               <div class="reservation__form--name">
                 <label for="name">Name<span class="mandatory-field">&nbsp;*</span></label>
                 <input type="text" class="input-control" id="name" placeholder="Enter Name" name="name" required
-                  aria-required="true" autocomplete="name" pattern="[A-Za-z]{2,}"
+                  aria-required="true" autocomplete="name" pattern="[A-Za-z ]{2,}"
                   title="Please enter at least two letters">
                 <p class="error-message" id="name-length-error" role="alert">Please enter at least two letters</p>
               </div>
 
               <div class="reservation__form--phone">
                 <label for="tel">Phone Number<span class="mandatory-field">&nbsp;*</span></label>
-                <div class="phone-number-container">
-                  <select id="country_code">
-                    <option value="+44">+44 (UK)</option>
-                    <option value="">Other</option>
-                  </select>
-                  <input type="tel" class="input-control" id="tel" placeholder="Enter Phone Number" name="tel" required
-                    aria-required="true" autocomplete="tel" pattern="[0-9]{5,}"
-                    title="Please enter a valid phone number">
-                  <!-- aria-describedby="phone-length-error" aria-invalid="true" -->
-                </div>
-                <p class="error-message" id="phone-length-error" role="alert">Please enter a valid phone number</p>
+                <input type="tel" class="input-control" id="tel" placeholder="Enter Phone Number" name="tel" required
+                  aria-required="true" autocomplete="tel" pattern="[0-9+]{7,}"
+                  title="Please enter a valid phone number">
+                <p class="error-message" id="phone-number-error" role="alert">Please enter a valid phone number</p>
               </div>
 
               <div class="reservation__form--email">
@@ -351,15 +346,13 @@
                 <input type="email" class="input-control" id="email" placeholder="Enter Email" name="email" required
                   aria-required="true" autocomplete="email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
                   title="Please enter a valid email address">
-                <!-- aria-describedby="email-error" aria-invalid="true" -->
                 <p class="error-message" id="email-error" role="alert">Please enter a valid email address</p>
               </div>
 
               <div class="reservation__form--guest-number">
                 <label for="ppl">Number of Guest(s)<span class="mandatory-field">&nbsp;*</span></label>
-                <!-- <input type="number" class="input-control" id="ppl" placeholder="Enter Number" name="ppl" min="1"
-                  max="12" required aria-required="true" title="Please enter a valid number"> -->
-                <select id="ppl">
+                <select class="select-control" id="ppl" name="ppl" required aria-required="true"
+                  title="Please select the number of guest(s)">
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
@@ -373,7 +366,6 @@
                   <option value="11">11</option>
                   <option value="12">12</option>
                 </select>
-                <p class="error-message" id="guest-number-error" role="alert">Please enter a valid number</p>
               </div>
 
               <div class="reservation__form--date">
@@ -393,7 +385,8 @@
               <div class="reservation__form--message">
                 <label for="message">Message / Special Request</label>
                 <textarea class="textarea-control" id="message" name="message" aria-required="false"
-                  onfocus="clearPlaceholder()">Message / Special Request (e.g. Dietary Restriction, Special Occasions)</textarea>
+                  onfocus="clearPlaceholder()"
+                  title="Please provide any additional information or special requests">(e.g. Dietary Restriction, Special Occasions)</textarea>
               </div>
 
               <div class="reservation__form--bottom-part">
