revised accordion code

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
       <section id="menu">
         <h1>MENU</h1>
         <div class="small-menu">
-          <button class="small-menu__accordion small-menu__accordion--active" aria-expanded="true">
+          <button class="small-menu__accordion small-menu__accordion--active">
             <h2>PASTA</h2>
           </button>
-          <div class="small-menu__panel" aria-hidden="false">
+          <div class="small-menu__panel">
             <div class="small-menu__content">
               <div class="small-menu__item--1">Salmon Spaghetti</div>
               <div class="small-menu__item-price--1">£12.50</div>
@@ -150,10 +150,10 @@
             </div>
           </div>
 
-          <button class="small-menu__accordion small-menu__accordion--active" aria-expanded="true">
+          <button class="small-menu__accordion small-menu__accordion--active">
             <h2>RICE</h2>
           </button>
-          <div class="small-menu__panel" aria-hidden="false">
+          <div class="small-menu__panel">
             <div class="small-menu__content">
               <div class="small-menu__item--1">Thai Pineapple Fried Rice</div>
               <div class="small-menu__item-price--1">£16.50</div>
@@ -164,10 +164,10 @@
             </div>
           </div>
 
-          <button class="small-menu__accordion small-menu__accordion--active" aria-expanded="true">
+          <button class="small-menu__accordion small-menu__accordion--active">
             <h2>SIDES</h2>
           </button>
-          <div class="small-menu__panel" aria-hidden="false">
+          <div class="small-menu__panel">
             <div class="small-menu__content">
               <div class="small-menu__item--1">Satay Chicken Skewers</div>
               <div class="small-menu__item-price--1">£8.00</div>
