revise navbar.js for aria-attributes

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
         <div class="navbar__container">
           <a class="navbar__brand g-logofont" href="#home">R2 Place</a>
 
-          <button class="navbar__toggler" type="button" aria-controls="navigation" aria-expanded="false"
+          <button class="navbar__toggler" type="button" aria-controls="navigation"
             aria-label="Toggle Navigation">&#9776;</button>
 
-          <div class="navbar__collapse" id="collapsibleNavbar" aria-hidden="true">
+          <div class="navbar__collapse" id="collapsibleNavbar">
             <ul class="navbar__nav">
               <li class="navbar__nav-item">
                 <a class="navbar__nav-link" href="#menu">Menu</a>
