minor amendment on large menu

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <h2>SIDES</h2>
               </a>
             </div> -->
-            <button onclick="openMenu(event, 'Pasta');" class="large-menu__tab large-menu__tab--active">
+            <button id="myButton" onclick="openMenu(event, 'Pasta');" class="large-menu__tab large-menu__tab--active">
               PASTA
             </button>
             <button onclick="openMenu(event, 'Rice');" class="large-menu__tab">
