--- a/index.html
+++ b/index.html
@@ -196,18 +196,18 @@
                 <h2>SIDES</h2>
               </a>
             </div> -->
-            <button id="myButton" onclick="openMenu(event, 'Pasta');" class="large-menu__tab large-menu__tab--active">
+            <button onclick="openMenu(event, 'pasta');" class="large-menu__tab large-menu__tab--active" id="myButton">
               PASTA
             </button>
-            <button onclick="openMenu(event, 'Rice');" class="large-menu__tab">
+            <button onclick="openMenu(event, 'rice');" class="large-menu__tab">
               RICE
             </button>
-            <button onclick="openMenu(event, 'Sides');" class="large-menu__tab">
+            <button onclick="openMenu(event, 'sides');" class="large-menu__tab">
               SIDES
             </button>
           </div>
 
-          <div id="Pasta" class="large-food-menu">
+          <div id="pasta" class="large-food-menu">
             <div class="large-menu__item large-menu__item--1">
               <h2>Salmon Spaghetti<span class="large-menu__item-price">£12.50</span></h2>
               <p>Salmon Spaghetti with Mushroom Sauce</p>
@@ -228,7 +228,7 @@
             </div>
           </div>
 
-          <div id="Rice" class="large-food-menu">
+          <div id="rice" class="large-food-menu">
             <div class="large-menu__item large-menu__item--1">
               <h2>Thai Pineapple Fried Rice<span class="large-menu__item-price">£16.50</span></h2>
               <p>Thai-style Fried Rice with Seafood and Pineapple</p>
@@ -249,7 +249,7 @@
             </div>
           </div>
 
-          <div id="Sides" class="large-food-menu">
+          <div id="sides" class="large-food-menu">
             <div class="large-menu__item large-menu__item--1">
               <h2>Satay Chicken Skewers<span class="large-menu__item-price">£8.00</span></h2>
               <p>Grilled Chicken Skewers with Satay Sauce</p>
